syntax = "proto3";
option java_package = "com.altuhin.models.sec04";
option java_multiple_files = true;
package sec04;

import "sec04/common/address.proto";
import "sec04/common/car.proto";

message Person {
  //the protobuf expects some field number, we simply give some field number
  string last_name = 1;
  int32 age = 2;
  sec04.common.Address address = 3;
  sec04.common.Car car = 4;
}